# FindMySlot

./: config.py  pyproject.toml  run.py
app/: __init__.py  models.py
app/routes/: auth.py  bookings.py  main.py  parking.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/main/: location_details.html  map.html
attached_assets/: Pasted-App-Name-Find-My-Slot-Description-Find-My-Slot-is-a-native-mobile-application-that-helps-users-1747676448430.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AdminDashboard.tsx  AuthScreen.tsx  BookingConfirmationScreen.tsx  BottomNavigation.tsx  DashboardScreen.tsx  MapScreen.tsx  NotificationsScreen.tsx  PaymentScreen.tsx  ProfileScreen.tsx  SlotDetailsScreen.tsx
client/src/contexts/: AuthContext.tsx  ParkingContext.tsx
client/src/lib/: mapUtils.ts
client/src/pages/: Home.tsx
client/src/static/css/: main.css
server/: routes.ts  storage.ts
shared/: schema.ts
